--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "arabic-persian-reshaper": "^1.0.1",
+    "arabic-reshaper": "^1.1.0",
+    "bidi-js": "^1.0.3",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.24.5",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
